--- a/css/game.css
+++ b/css/game.css
@@ -6,6 +6,296 @@
 }
 #canvasHolder{
     display: none;
+    height: 55px;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
 }
+
+#canvasHolder *{
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+#canvasHolder input {
+    background: none;
+    border: none;
+    outline: none;
+    background-size: 100% 100%;
+    height: 50px;
+    font-family: 'Boogaloo';
+    font-size: 1em;
+    padding: 0px 20px 3px 20px;
+}
+
+#canvasHolder input[type=button] {
+    background-image: url("../shapes/btn_bg.png");
+    color: white;
+    width: 10%;
+    text-transform: uppercase;
+
+}
+
+#canvasHolder input[type=text] {
+    background-image: url("../shapes/text_bar.png");
+    color: black;
+    width: 20%;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url('../shapes/main_background.png');
+}
+
 @font-face { font-family: 'Boogaloo'; src: url('fonts/Boogaloo-Regular.otf'); }
 @font-face { font-family: 'Scoreboard'; src: url('fonts/scoreboard.ttf'); }
+
+#continueButton {
+    display: none;
+}
+
+.outer-wrapper {
+    display: none;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-image: url('../shapes/main_background.png');
+}
+
+.inner-wrapper {
+    position: relative;
+    padding: 1%;
+    border-radius: 5px;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.center-container {
+    margin: 0px auto;
+    width: 60%;
+    max-width: 500px;
+    border-radius: 5px;
+    padding: 1% 0%;
+    font-family: 'Boogaloo';
+    text-align: center;
+}
+
+#menu-wrapper .title {
+    width: 60%;
+    left: 20%;
+    font-size: 2em;
+}
+
+#menu-wrapper .center-container {
+    width: 35%;
+    font-size: 1.1em;
+    max-width: 300px;
+}
+
+.center-container *{
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.title {
+    text-align: center;
+    background-image: url("../shapes/hs_title.png");
+    background-size: 100% 100%;
+    padding: 2% 3%;
+    box-sizing: border-box;
+    width: 46%;
+    position: relative;
+    left: 27%;
+    color: #60EA08;
+    text-shadow: 2px 2px #313232;
+    font-size: 2.7em;   
+}
+
+.login-input-wrapper,
+.register-input-wrapper,
+.menu-input-wrapper,
+.score-output-wrapper {
+    background-image: url("../shapes/hs_table.png");
+    background-size: 100% 100%;
+    width: 100%;
+    padding: 10% 12% 8% 12%;
+    box-sizing: border-box;
+}
+
+.menu-input-wrapper {
+    padding: 20%;   
+}
+
+.login-input-wrapper h4,
+.register-input-wrapper h4,
+.score-output-wrapper h4{
+    text-align: center;
+    font-size: 1.3em; 
+    color: #60EA08;
+    margin: 0;
+}
+
+.login-input-wrapper>div,
+.register-input-wrapper>div,
+.menu-input-wrapper>div,
+.score-output-wrapper>div{
+    background-image: url("../shapes/hs_table_inner_bg.png");
+    background-size: 100% 100%;
+    padding: 4% 6% 3% 6%;
+    color: #177F00;
+    font-size: 1.6em;
+    margin-top: 3%;
+    text-align: left;
+}
+
+.menu-input-wrapper>div {
+    text-align: center;
+}
+
+.login-input-wrapper input[type=text],
+.register-input-wrapper input[type=text],
+.register-input-wrapper input[type=password] {
+    padding: 2%;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.login-input-wrapper .input-container,
+.register-input-wrapper .input-container {
+    border-radius: 30px;
+    width: 100%;
+    margin: 5% 0%;
+    background: -webkit-gradient(linear, left top, left 25, from(#FFFFFF), color-stop(1%, #9C9FA1), to(#FFFFFF));
+    background: -moz-linear-gradient(top, #FFFFFF, #9C9FA1 1px, #FFFFFF 9px);
+}
+
+.login-input-wrapper input[type=password] {
+    width: 88%;
+    padding: 2%;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    float: left;
+}
+
+.center-container button {
+    outline: none;
+    cursor: pointer;
+}
+
+.login-buttons,
+.register-buttons {
+    width: 100%;
+    text-align: center;
+}
+
+.button-conatiner {
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.button-conatiner button,
+.register-buttons button,
+.menu-btns {
+    min-width: 80%;
+    background-color: transparent;
+    border: none;
+    font-size: .8em;
+    font-family: 'Boogaloo';
+    color: white;
+    padding: 6% 11% 8% 11%;
+    background-image: url("../shapes/btn_bg.png");
+    background-size: 100% 100%;
+}
+
+.menu-btns {
+    margin: 5% 0%;
+}
+
+.register-buttons button {
+    min-width: 50%;
+}
+
+#play-as-guest {
+    background-image: url("../shapes/play_as_guest_btn.png");
+    background-size: 100% 100%;
+    background-color: transparent;
+    border: none;
+    font-size: 1.3em;
+    font-family: 'Boogaloo';
+    color: white;
+    padding: 3% 6% 3% 6%;
+    outline: none;
+}
+
+.msg {
+    font-size: .7em;
+    text-align: center;
+}
+
+.forgot-password {
+    font-size: 1em;
+    cursor: pointer;
+    padding: 0% 3%;
+}
+
+.volume-btns {
+    background-image: url("../shapes/sound_on_btn.png");
+    background-size: 100% 100%;
+    background-color: transparent;
+    border: none;
+    width: 50px;
+    height: 50px;
+}
+
+@media screen and (max-width: 700px) { 
+    .center-container {
+        width: 75%;
+    }
+    .title {
+        font-size: 1.5em;
+    }
+    .login-input-wrapper h4,
+    .register-input-wrapper h4 {
+        font-size: 1em;
+    }
+    .login-input-wrapper>div,
+    .register-input-wrapper>div {
+        font-size: 1em;
+    }
+    .button-conatiner button,
+    .register-buttons button {
+        font-size: 1em;
+    }
+
+    #play-as-guest {
+        font-size: 1em;
+    }
+
+    .forgot-password {
+        font-size: 1em;
+    }
+    #menu-wrapper .title {
+        font-size: 1.5em;
+    }
+
+    #menu-wrapper .center-container {
+        width: 70%;
+        font-size: .8em;
+    }
+        #canvasHolder input {
+        width: auto !important;
+    }
+}
