--- a/css/game.css
+++ b/css/game.css
@@ -188,6 +188,7 @@ body {
     background-color: transparent;
     border: none;
     outline: none;
+    font-family: 'Boogaloo';
     float: left;
 }
 
@@ -312,7 +313,7 @@ body {
     padding: 1% 3% 1% 3%;
 }
 
-#score-wrapper #back-button {
+#back-button {
     background-image: url("../shapes/back_btn.png");
     background-size: 100% 100%;
     background-color: transparent;
@@ -326,6 +327,9 @@ body {
     cursor: pointer;
 }
 
+#menu-wrapper #back-button{
+    display:none;
+}
 #score-wrapper .title {
     width: 58%;
     left: 21%;
@@ -380,4 +384,10 @@ body {
     padding: 3% 6% 3% 6%;
     outline: none;
     margin-top: -6%;
+}
+.score-output-wrapper .total-scores{
+    font-size: 1.3em;
+}
+.score-output-wrapper .weekly-scores{
+    font-size: 1.3em;
 }
