- Updated splash screen animation.

--- a/css/game.css
+++ b/css/game.css
@@ -481,15 +481,21 @@ body {
     background-color: white;
     display: none;
     position: absolute;
-    height: 94%;
-    width: 94%;
-    top: 3%;
-    left: 3%;
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    left: 0%;
 }
 
-.splash-screen img {
-    width: 50%;
-    max-width: 300px;
+.splash-logo {
+    width: 60%;
+    max-width: 400px;
+    border: 2px #020202;
+}
+
+#BHL-logo,
+#tiltfactor-logo {
+    display: none;
 }
 
 @media screen and (max-width: 700px),
